#
#Copyright(C) thecodeway.com
#

add_library(DXUT_Core 
    DDSTextureLoader.cpp
    DDSTextureLoader.h  
    dxerr.cpp           
    dxerr.h             
    DXUT.cpp            
    DXUT.h              
    DXUTDevice11.cpp    
    DXUTDevice11.h      
    DXUTmisc.cpp        
    DXUTmisc.h          
    ScreenGrab.cpp      
    ScreenGrab.h        
    WICTextureLoader.cpp
    WICTextureLoader.h          
)
